<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cvback2"
    android:orientation="vertical"
    android:outlineAmbientShadowColor="@color/white"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">


        <ImageView
            android:id="@+id/imageViewAvatar"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@drawable/test" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewFirstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/myname"
                android:textColor="@color/white"
                android:textSize="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    app:srcCompat="@android:drawable/stat_sys_phone_call" />

                <TextView
                    android:id="@+id/textViewPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    app:srcCompat="@android:drawable/sym_action_email" />

                <TextView
                    android:id="@+id/textViewEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    app:srcCompat="@android:drawable/ic_dialog_map" />

                <TextView
                    android:id="@+id/textViewAdresse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/adresse"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewExperiences"
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFF9F9"
        android:gravity="center"
        android:background="@drawable/bordure"
        android:text="@string/tittle_experiences"
        android:textSize="32dp" />

    <ListView
        android:id="@+id/ListViewExperiences"
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:listitem="@layout/item_experience" />

    <TextView
        android:id="@+id/textViewFormations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/bordure"
        android:textColor="@color/white"
        android:text="@string/tittle_formations"
        android:textSize="32dp" />

    <ListView
        android:id="@+id/ListViewFormations"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textColor="@color/white"
        android:layout_weight="1"
        tools:listitem="@layout/item_formation" />

    <Button
        android:id="@+id/buttonCompetence"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_rectangle"
        android:text="@string/tittle_competences"
        android:textAllCaps="false"
        android:textSize="20dp" />

</LinearLayout>